[package]
name = "pico2-a-button"
version = "0.1.0"
edition = "2024"

[dependencies]
nswitch-hid = { path = "../.." }
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.4", features = ["rp235xa", "time-driver", "binary-info"] }
embassy-futures = "0.1"
embassy-time = "0.4"
embassy-usb = { version = "0.4", features = ["usbd-hid"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1"
